gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-external_doc.rs
#[doc(include="asdf.md")] // { dg-error ".E0658." "" { target *-*-* } }
// { dg-error ".E0658." "" { target *-*-* } .-2 }
fn main() {}

